--- a/index.html
+++ b/index.html
@@ -1,73 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-div.container {
-    width: 100%;
-    border: 0px solid silver;
-    align: center;
-}
+  <head>
+    <style>
+      div.container {
+        width: 100%;
+        border: 0px solid silver;
+        align: center;
+      }
 
-header, footer {
-    padding: 10px;
-    color: black;
-    background-color: white;
-    clear: left;
-    text-align: center;
-    align: center;
-}
+      header,
+      footer {
+        padding: 10px;
+        color: black;
+        background-color: white;
+        clear: left;
+        text-align: center;
+        align: center;
+      }
 
-nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
-}
+      nav {
+        float: left;
+        max-width: 160px;
+        margin: 0;
+        padding: 1em;
+      }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-   
-nav ul a {
-    text-decoration: none;
-}
+      nav ul {
+        list-style-type: none;
+        padding: 0;
+      }
 
-article {
-    margin-left: 170px;
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
-}
-</style>
-</head>
-<body>
+      nav ul a {
+        text-decoration: none;
+      }
 
-<div class="container">
+      article {
+        margin-left: 170px;
+        border-left: 1px solid gray;
+        padding: 1em;
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <img src="gsis.png" alt="fire" style="width: 1000px" />
+    </div>
 
-<header>
-   <img src="gsis.png" alt="fire" style="width:1000px">
-</header>
-
-<!--  
-<nav>
-  <ul>
-    <li><a href="#">-GSIS-</a></li>
-    <li><a href="#">-GSIS-</a></li>
-    <li><a href="#">-GSIS-</a></li>
-  </ul>
-</nav>
-
-<article>
-  <h1>GSIS - Gaisrinës saugos inþinerininës sistemos</h1>
-  informacija ruoðiama
-</article>
--->
-
-<footer>Copyright &copy; admis.lt</footer>
-
-</div>
-
-</body>
+    <footer>Copyright &copy; admis.lt</footer>
+  </body>
 </html>
-
