--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 m-5">
-        <h2>Gasirinės saugos inžinerininės sistemos</h2>
+        <h1>Gasirinės saugos inžinerininės sistemos</h1>
       </div>
     </div>
     <div class="row">
@@ -186,28 +186,18 @@
     </div>
     <!-- -------------------- -->
 
-    <!-- <div class="row text-center">
-        <div class="col-2">
-          <div>
-            <img src="detector.png" alt="central" style="width: 100%" />
-          </div>
-          <div>Gaisro aptikimo ir signalizavimo sistemos</div>
-        </div>
-        <div class="col-2">
-          <div>
-            <img src="sprinkler.webp" alt="central" style="width: 100%" />
-          </div>
-          <div>Automatinės gaisro gesinomo sistemos</div>
-        </div>
-        <div class="col-2">Dūmų ir šilumos valdymo sistemos</div>
-        <div class="col-2">Vidaus gaisrinis vandentiekis</div>
-        <div class="col-2">Pirminės gaisro gesinomo priemonės</div>
-        <div class="col-2">Avarinio apšvietimo sistemos</div>
-      </div> -->
+    <div class="row mt-3">
+      <div class="col-12 col-sm-12 col-lg-12 p-5" style="color: white; background-color: rgb(189, 65, 65)">
+        <div>Susisiekite su mumis: </div>
+        <div>El.paštas: <a href="mailto:gsis@admis.lt" style="color:white;">gsis@admis.lt</a> </div>
+      </div>
+
+    </div>
   </div>
+
 </body>
 <footer>
-  <div class="mt-5" style="text-align: center">Copyright &copy; admis.lt</div>
+  <div class="mt-5" style="text-align: center">&copy; admis.lt</div>
 </footer>
 
 </html>
