--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <style></style>
+  <style>
+    .cta-button {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #fff;
+      background-color: #0078D7;
+      border: none;
+      border-radius: 5px;
+      text-align: center;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background-color: #005999;
+    }
+  </style>
 </head>
 
 <body>
@@ -188,8 +206,24 @@
 
     <div class="row mt-3">
       <div class="col-12 col-sm-12 col-lg-12 p-5" style="color: white; background-color: rgb(189, 65, 65)">
-        <div>Susisiekite su mumis: </div>
-        <div>El.paštas: <a href="mailto:gsis@admis.lt" style="color:white;">gsis@admis.lt</a> </div>
+        <!-- <div>Susisiekite su mumis: </div>
+        <div>El.paštas: <a href="mailto:gsis@admis.lt" style="color:white;">gsis@admis.lt</a> </div> -->
+        <div>
+          <div>Pasiruošę apsaugoti savo turtą?</div>
+          <div>
+            Nelaukite, kol bus per vėlu. Užtikrinkite savo pastato saugumą mūsų visapusiškomis priešgaisrinės saugos
+            inžinerinėmis sistemomis. Mūsų patyrusių specialistų komanda pasiruošusi pasiūlyti Jums pritaikytus
+            sprendimus, atitinkančius Jūsų konkrečius poreikius.
+          </div>
+          <div>
+            Susisiekite su mumis šiandien adresu <a href="mailto:gsis@admis.lt" style="color:white;">gsis@admis.lt</a>
+            arba spustelėkite žemiau esantį mygtuką ir suplanuokite nemokamą konsultaciją.
+          </div>
+          <div class="mt-3 text-center">
+            <a href="mailto:gsis@admis.lt" class="btn btn-primary">Suplanuokite nemokamą konsultaciją</a>
+          </div>
+
+        </div>
       </div>
 
     </div>
